Social Links Update

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         <!-- box-header -->
         <header class="box-header">
             <div class="box-logo">
-                <a href="index.html"><img src="img/logo.png" width="80" alt="Logo"></a>
+                <a href="index.html"><img src="img/icons/white_transparent.gif" width="80" alt="Logo"></a>
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
@@ -66,12 +66,13 @@
 
                 <li class="box-label">Follow me</li>
 
-                 <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-youtube"></i></a></li>
+                <li class="box-social"><a href="https://www.facebook.com/etherworld2017" target="_blank"><i class="ion-social-facebook"></i></a></li>
+                <li class="box-social"><a href="https://www.instagram.com/etherworld.co/" target="_blank"><i class="ion-social-instagram-outline"></i></a></li>
+                <li class="box-social"><a href="https://twitter.com/ether_world" target="_blank"><i class="ion-social-twitter"></i></a></li>
+                <li class="box-social"><a href="https://www.youtube.com/channel/UCnceAY-vAQsO8TgGAj5SGFA" target="_blank"><i class="ion-social-youtube"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-github"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>
+                <li class="box-social"><a href="https://www.linkedin.com/company/etherworld/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
             </ul>
         </nav>
         <!-- end nav -->
