--- a/index.html
+++ b/index.html
@@ -72,12 +72,13 @@
 
                 <li class="box-label">Follow me</li>
 
-                <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-youtube"></i></a></li>
+                <li class="box-social"><a href="https://www.facebook.com/etherworld2017" target="_blank"><i class="ion-social-facebook"></i></a></li>
+                <li class="box-social"><a href="https://www.instagram.com/etherworld.co/" target="_blank"><i class="ion-social-instagram-outline"></i></a></li>
+                <li class="box-social"><a href="https://twitter.com/ether_world" target="_blank"><i class="ion-social-twitter"></i></a></li>
+                <li class="box-social"><a href="https://www.youtube.com/channel/UCnceAY-vAQsO8TgGAj5SGFA" target="_blank"><i class="ion-social-youtube"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-github"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>
+                <li class="box-social"><a href="https://www.linkedin.com/company/etherworld/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
             </ul>
         </nav>
         <!-- end nav -->
@@ -283,7 +284,7 @@
 
     <!-- Carousel -->
     <div class="container layout-pb-xl">
-        <div class="row" style="margin-top: 30px;">
+        <div class="row" style="margin: 30px 0px;">
             <div class="col-md-12">
                 <div id="news-slider" class="owl-carousel">
                     <div class="post-slide mt-80">
