--- a/portfolio.html
+++ b/portfolio.html
@@ -66,10 +66,13 @@
 
                 <li class="box-label">Follow me</li>
 
-                <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
+                <li class="box-social"><a href="https://www.facebook.com/etherworld2017" target="_blank"><i class="ion-social-facebook"></i></a></li>
+                <li class="box-social"><a href="https://www.instagram.com/etherworld.co/" target="_blank"><i class="ion-social-instagram-outline"></i></a></li>
+                <li class="box-social"><a href="https://twitter.com/ether_world" target="_blank"><i class="ion-social-twitter"></i></a></li>
+                <li class="box-social"><a href="https://www.youtube.com/channel/UCnceAY-vAQsO8TgGAj5SGFA" target="_blank"><i class="ion-social-youtube"></i></a></li>
+                <li class="box-social"><a href="#0"><i class="ion-social-github"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>
+                <li class="box-social"><a href="https://www.linkedin.com/company/etherworld/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
             </ul>
         </nav>
         <!-- end nav -->
