Project banner complete

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,8 +79,8 @@
     </div>
 
     <!-- top bar -->
-    <div class="top-bar">
-        <img class="head-image" src="https://lh3.googleusercontent.com/SKTaosmYtqiON_pNUTl2Zt103wohir0h0Rpz6RARnKccZHAlsTNh81WoLwFL7wIpw9a0wZqTnswc87KOWEziuWIcZK-PS-pmY_FYssNSsKYdpYrV4Bcg4WEqk_7UOvZAbGd8jBwH0QZEyCEIlHBP2g" alt="">
+    <div style="background-image: url('https://lh3.googleusercontent.com/SANfSg9w4W3w61O9ItyeVrl6cdF-41F0cU-G184n-MRyZWLCZiL9SH6qXYdEj8FNL4ABzPf_HQMxYJRyJFqgq_fLGa57adaDihPKNeibeYla-wFUfDdEcrvRCxxn6__u751ukatDDB-BRKR-sOpFcA');" class="top-bar">
+        <img style="width: 345px;" class="head-image" src="img/icons/project.png" alt="">
     </div>
     <!-- end top bar -->
 
@@ -260,7 +260,7 @@
     <!-- footer -->
     <footer>
         <div class="container-fluid">
-            <p class="copyright">© Box Portfolio 2016</p>
+            <p class="copyright">© Avarch</p>
         </div>
     </footer>
     <!-- end footer -->
@@ -287,6 +287,8 @@
         function changeBackgroundall() {
             topbar[0].style.background = 'url("https://lh3.googleusercontent.com/SANfSg9w4W3w61O9ItyeVrl6cdF-41F0cU-G184n-MRyZWLCZiL9SH6qXYdEj8FNL4ABzPf_HQMxYJRyJFqgq_fLGa57adaDihPKNeibeYla-wFUfDdEcrvRCxxn6__u751ukatDDB-BRKR-sOpFcA") no-repeat center';
             topbar[0].style.padding ='70px 0px 70px' ;
+            myimage[0].src = "img/icons/project.png";
+            myimage[0].style.width = "345px";
             topbar[0].style.backgroundSize = "cover";
             // console.log("first");
         }
@@ -294,6 +296,7 @@
             topbar[0].style.background = 'url("https://lh4.googleusercontent.com/Spc2hb3LSrB6XlQ7OpBDAcoPG14gab2tgb6x7FNS3ftF_CvR1yfYbBn-eBWyrmh463dCbAgbU08xZ8sUBYId2iIp79pxzdc5laKh6vNo5B3DNEbkZk3XXoRE5BnDZYAnJEogGN26_2aNINoN2PB6aQ") no-repeat center';
             topbar[0].style.padding ='70px 0px 70px' ;
             myimage[0].src = "https://lh3.googleusercontent.com/SKTaosmYtqiON_pNUTl2Zt103wohir0h0Rpz6RARnKccZHAlsTNh81WoLwFL7wIpw9a0wZqTnswc87KOWEziuWIcZK-PS-pmY_FYssNSsKYdpYrV4Bcg4WEqk_7UOvZAbGd8jBwH0QZEyCEIlHBP2g";
+            myimage[0].style.width = "350px";
             topbar[0].style.backgroundSize = "cover";
             // console.log("second");
         }
@@ -301,6 +304,7 @@
             topbar[0].style.background = 'url("https://lh6.googleusercontent.com/jP3r_8ReKPYcpCr05bAZQJ90aUPb7DKDtbS-0fHEPX4a8aH0O8qPFWZMvWXNLOigPbOQeiUW4hFxvV8qByA2SP_Hx56ZpE4ezvscEjT5ivQ9EBbLzgkFi81U2FJi59QiCyiG091cci2Ai3k-cASTMg") no-repeat center';
             topbar[0].style.padding ='0px' ;
             myimage[0].src = "https://lh5.googleusercontent.com/V7zM4DgKiEoqZiue0iN99D9tmgrm3PNkftekA1LbRV4185C8RxQlgJykMLVxS7hSTwKPYB_wO1pyJk6FDOwSYZl3arWrc9hNA189fZdCph3N0a6eSJG1d6g5cTvpc_FscQa5KSJCtERnhPv3y376CA";
+            myimage[0].style.width = "490px";
             
             // console.log("third");
         }        
