--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
     <!-- footer -->
     <footer>
         <div class="container-fluid">
-            <p class="copyright">© Box Portfolio 2016</p>
+            <p class="copyright">© Avarch</p>
         </div>
     </footer>
     <!-- end footer -->
