Localised all the photos

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                 <li><a href="index.html">Home</a> <i class="ion-ios-circle-filled color"></i></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="portfolio.html">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
 
 
@@ -142,9 +142,9 @@
 
                 <!-- single work -->
                 <div class="col-md-6 col-sm-12 photography">
-                    <a style="height:760px; width:760px; display: flex; justify-content: center; align-items: center; background-image: url('https://lh6.googleusercontent.com/jP3r_8ReKPYcpCr05bAZQJ90aUPb7DKDtbS-0fHEPX4a8aH0O8qPFWZMvWXNLOigPbOQeiUW4hFxvV8qByA2SP_Hx56ZpE4ezvscEjT5ivQ9EBbLzgkFi81U2FJi59QiCyiG091cci2Ai3k-cASTMg'); background-size: 100% 100%; background-repeat: no-repeat;" href="single-project.html"
+                    <a style="height:760px; width:760px; display: flex; justify-content: center; align-items: center; background-image: url('img/backgrounds/etherback.png'); background-size: 100% 100%; background-repeat: no-repeat;" href="single-project.html"
                         class="portfolio_item">
-                        <img src="https://lh5.googleusercontent.com/V7zM4DgKiEoqZiue0iN99D9tmgrm3PNkftekA1LbRV4185C8RxQlgJykMLVxS7hSTwKPYB_wO1pyJk6FDOwSYZl3arWrc9hNA189fZdCph3N0a6eSJG1d6g5cTvpc_FscQa5KSJCtERnhPv3y376CA"
+                        <img src="img/icons/etherworld.png"
                             alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
@@ -192,8 +192,8 @@
 
                 <!-- single work -->
                 <div class="col-md-6 col-sm-12 photography">
-                    <a style="height:760px; width:760px; display: flex; justify-content: center; align-items: center; background-image: url('https://lh4.googleusercontent.com/Spc2hb3LSrB6XlQ7OpBDAcoPG14gab2tgb6x7FNS3ftF_CvR1yfYbBn-eBWyrmh463dCbAgbU08xZ8sUBYId2iIp79pxzdc5laKh6vNo5B3DNEbkZk3XXoRE5BnDZYAnJEogGN26_2aNINoN2PB6aQ');" href="single-project.html" class="portfolio_item">
-                        <img src="https://lh3.googleusercontent.com/SKTaosmYtqiON_pNUTl2Zt103wohir0h0Rpz6RARnKccZHAlsTNh81WoLwFL7wIpw9a0wZqTnswc87KOWEziuWIcZK-PS-pmY_FYssNSsKYdpYrV4Bcg4WEqk_7UOvZAbGd8jBwH0QZEyCEIlHBP2g" alt="image" class="img-responsive" />
+                    <a style="height:760px; width:760px; display: flex; justify-content: center; align-items: center; background-image: url('img/backgrounds/eips.png');" href="single-project.html" class="portfolio_item">
+                        <img src="img/icons/eips.gif" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
