--- a/projects.html
+++ b/projects.html
@@ -57,11 +57,11 @@
         <!-- nav -->
         <nav>
             <ul class="box-primary-nav">
-                <li class="box-label">About me</li>
+                <li class="box-label">About Us</li>
 
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="portfolio.html">Projects</a> <i class="ion-ios-circle-filled color"></i></li>
+                <li><a href="projects.html">Projects</a> <i class="ion-ios-circle-filled color"></i></li>
                 <li><a href="contact.html">Contact Us</a></li>
 
                 <li class="box-label">Follow me</li>
@@ -285,7 +285,7 @@
         let topbar= document.getElementsByClassName('top-bar');
         let myimage= document.getElementsByClassName('head-image');
         function changeBackgroundall() {
-            topbar[0].style.background = 'url("https://lh3.googleusercontent.com/SANfSg9w4W3w61O9ItyeVrl6cdF-41F0cU-G184n-MRyZWLCZiL9SH6qXYdEj8FNL4ABzPf_HQMxYJRyJFqgq_fLGa57adaDihPKNeibeYla-wFUfDdEcrvRCxxn6__u751ukatDDB-BRKR-sOpFcA") no-repeat center';
+            topbar[0].style.background = 'url("img/backgrounds/all.png") no-repeat center';
             topbar[0].style.padding ='70px 0px 70px' ;
             myimage[0].src = "img/icons/project.png";
             myimage[0].style.width = "345px";
@@ -293,17 +293,17 @@
             // console.log("first");
         }
         function changeBackgroundeips() {
-            topbar[0].style.background = 'url("https://lh4.googleusercontent.com/Spc2hb3LSrB6XlQ7OpBDAcoPG14gab2tgb6x7FNS3ftF_CvR1yfYbBn-eBWyrmh463dCbAgbU08xZ8sUBYId2iIp79pxzdc5laKh6vNo5B3DNEbkZk3XXoRE5BnDZYAnJEogGN26_2aNINoN2PB6aQ") no-repeat center';
+            topbar[0].style.background = 'url("img/backgrounds/eips.png") no-repeat center';
             topbar[0].style.padding ='70px 0px 70px' ;
-            myimage[0].src = "https://lh3.googleusercontent.com/SKTaosmYtqiON_pNUTl2Zt103wohir0h0Rpz6RARnKccZHAlsTNh81WoLwFL7wIpw9a0wZqTnswc87KOWEziuWIcZK-PS-pmY_FYssNSsKYdpYrV4Bcg4WEqk_7UOvZAbGd8jBwH0QZEyCEIlHBP2g";
+            myimage[0].src = "img/icons/eips.gif";
             myimage[0].style.width = "350px";
             topbar[0].style.backgroundSize = "cover";
             // console.log("second");
         }
         function changeBackgroundether() {
-            topbar[0].style.background = 'url("https://lh6.googleusercontent.com/jP3r_8ReKPYcpCr05bAZQJ90aUPb7DKDtbS-0fHEPX4a8aH0O8qPFWZMvWXNLOigPbOQeiUW4hFxvV8qByA2SP_Hx56ZpE4ezvscEjT5ivQ9EBbLzgkFi81U2FJi59QiCyiG091cci2Ai3k-cASTMg") no-repeat center';
+            topbar[0].style.background = 'url("img/backgrounds/etherback.png") no-repeat center';
             topbar[0].style.padding ='0px' ;
-            myimage[0].src = "https://lh5.googleusercontent.com/V7zM4DgKiEoqZiue0iN99D9tmgrm3PNkftekA1LbRV4185C8RxQlgJykMLVxS7hSTwKPYB_wO1pyJk6FDOwSYZl3arWrc9hNA189fZdCph3N0a6eSJG1d6g5cTvpc_FscQa5KSJCtERnhPv3y376CA";
+            myimage[0].src = "img/icons/etherworld.png";
             myimage[0].style.width = "490px";
             
             // console.log("third");
