--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">about us</a> <i class="ion-ios-circle-filled color"></i></li>
-                <li><a href="portfolio.html">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">contact me</a></li>
 
                 <li class="box-label">Follow me</li>
