--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="portfolio.html">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">contact Us</a> <i class="ion-ios-circle-filled color"></i></li>
 
 
