--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         <!-- box-header -->
         <header class="box-header">
             <div class="box-logo">
-                <a href="index.html"><img src="img/icons/white_transparent.gif" width="80" alt="Logo"></a>
+                <a href="index.html"><img src="img/icons/Avarch.gif" width="80" alt="Logo"></a>
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
@@ -70,7 +70,7 @@
                 <li class="box-social"><a href="https://www.instagram.com/etherworld.co/" target="_blank"><i class="ion-social-instagram-outline"></i></a></li>
                 <li class="box-social"><a href="https://twitter.com/ether_world" target="_blank"><i class="ion-social-twitter"></i></a></li>
                 <li class="box-social"><a href="https://www.youtube.com/channel/UCnceAY-vAQsO8TgGAj5SGFA" target="_blank"><i class="ion-social-youtube"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-github"></i></a></li>
+                <li class="box-social"><a href="https://github.com/Avarch-org" target="_blank"><i class="ion-social-github"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>
                 <li class="box-social"><a href="https://www.linkedin.com/company/etherworld/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
             </ul>
@@ -92,20 +92,21 @@
         </div> -->
         <div class="col-md-17">
             <h3 class="uppercase">About Us </h3>
-            <h5>Blockchain & Ethereum World</h5>
+            <h5>Blockchain Products & Services</h5>
             <div class="h-30"></div>
             <p><b>Avarch is a software consultancy company providing blockchain products and services.</b></p>
 
-            <p>Avarch is a leading software company providing services to the Ethereum Blockchain. We engage potential developers in learning the concept of blockchain development, providing the opportunity to contribute to novice projects. We publish technical blogs, produce ELI5 videos and share  in-depth research report on blockchain protocols.</p>
-            <p>From blockchain media publishing to blockchain explorer services. Avarch is fostering the next generation developers to learn, contribute and expand the horizon of the blockchain ecosystem.</p>
+            <p style="text-align: justify;">Avarch is a leading software company providing services to the Ethereum Blockchain. We engage potential developers in learning the concept of blockchain development, providing the opportunity to contribute to novice projects. We publish technical blogs, produce ELI5 videos and share  in-depth research report on blockchain protocols.</p>
+            <p style="text-align: justify;">From blockchain media publishing to blockchain explorer services. Avarch is fostering the next generation developers to learn, contribute and expand the horizon of the blockchain ecosystem.</p>
             <div class="h-10"></div>
             <ul class="social-ul">
-                <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-youtube"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-github"></i></a></li>
+                <li class="box-social"><a href="https://www.facebook.com/etherworld2017" target="_blank"><i class="ion-social-facebook"></i></a></li>
+                <li class="box-social"><a href="https://www.instagram.com/etherworld.co/" target="_blank"><i class="ion-social-instagram-outline"></i></a></li>
+                <li class="box-social"><a href="https://twitter.com/ether_world" target="_blank"><i class="ion-social-twitter"></i></a></li>
+                <li class="box-social"><a href="https://www.youtube.com/channel/UCnceAY-vAQsO8TgGAj5SGFA" target="_blank"><i class="ion-social-youtube"></i></a></li>
+                <li class="box-social"><a href="https://github.com/Avarch-org" target="_blank"><i class="ion-social-github"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>
+                <li class="box-social"><a href="https://www.linkedin.com/company/etherworld/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
             </ul>
 
 
