--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
         <!-- box-header -->
         <header class="box-header">
             <div class="box-logo">
-                <a href="index.html"><img src="img/icons/white_transparent.gif" width="80" alt="Logo"></a>
+                <a href="index.html"><img src="img/icons/Avarch.gif" width="80" alt="Logo"></a>
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
@@ -73,7 +73,7 @@
                 <li class="box-social"><a href="https://www.instagram.com/etherworld.co/" target="_blank"><i class="ion-social-instagram-outline"></i></a></li>
                 <li class="box-social"><a href="https://twitter.com/ether_world" target="_blank"><i class="ion-social-twitter"></i></a></li>
                 <li class="box-social"><a href="https://www.youtube.com/channel/UCnceAY-vAQsO8TgGAj5SGFA" target="_blank"><i class="ion-social-youtube"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-github"></i></a></li>
+                <li class="box-social"><a href="https://github.com/Avarch-org" target="_blank"><i class="ion-social-github"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>
                 <li class="box-social"><a href="https://www.linkedin.com/company/etherworld/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
             </ul>
@@ -92,7 +92,7 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-6">
-            <form action="#" method="post">
+            <form method="post" action="mailto:contact@etherworld.co" enctype="text/plain">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="input-contact">
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <a href="#" class="btn btn-box">Send</a>
+                        <input class="btn btn-box" type="submit" value="Send">
                     </div>
                 </div>
             </form>
@@ -129,7 +129,7 @@
             <h3 class="text-uppercase">contact us</h3>
             <h5>Blockchain & Ethereum World</h5>
             <div class="h-30"></div>
-            <p>Avarch is a leading software company providing services to the Ethereum Blockchain. We engage potential developers in learning the concept of blockchain development, providing the opportunity to contribute to novice projects. We publish technical blogs, produce EUS videos and help them with in-depth research on blockchain protocol.</p>
+            <p>Avarch is a leading software company providing services to the Ethereum Blockchain. We engage potential developers in learning the concept of blockchain development, providing the opportunity to contribute to novice projects. We publish technical blogs, produce ELI5 videos and help them with in-depth research on blockchain protocol.</p>
             <div class="contact-info">
                 <p><i class="ion-ios-email"></i> contact@etherworld.co</p>
             </div>
